<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/text_home" />
    <item
        android:id="@+id/trendingFragment"
        android:icon="@drawable/ic_trending"
        android:enabled="true"
        android:title="@string/text_trending" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:enabled="true"
        android:title="@string/text_setting" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/ab_search" />
</menu>