<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_diaolg"
        android:clickable="true"
        android:focusable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:text="@string/text_PlayBackground"
            android:textSize="@dimen/text_18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_play"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin8dp"
            android:layout_marginBottom="@dimen/margin8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title">

            <RadioButton
                android:id="@+id/rb_On"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ic_17dp"
                android:layout_weight="1"
                android:text="@string/play_on" />

            <RadioButton
                android:id="@+id/rb_Off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/ic_17dp"
                android:text="@string/play_off" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
