<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/include"
            layout="@layout/layout_header"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8dp"
                    android:clickable="true"
                    android:drawablePadding="@dimen/padding20dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:lineHeight="22dp"
                    android:paddingLeft="@dimen/img20dp"
                    android:paddingTop="@dimen/padding16dp"
                    android:paddingRight="@dimen/img20dp"
                    android:paddingBottom="@dimen/padding16dp"
                    android:text="@string/txt_policy"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_policy"
                    app:drawableRightCompat="@drawable/custom_ic_go"
                    app:fontFamily="@font/roboto_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_notification"
                    tools:ignore="UnusedAttribute" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tx_play_backgroud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8dp"
                    android:clickable="true"
                    android:drawablePadding="@dimen/padding20dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:lineHeight="22dp"
                    android:paddingLeft="@dimen/img20dp"
                    android:paddingTop="@dimen/padding16dp"
                    android:paddingRight="@dimen/img20dp"
                    android:paddingBottom="@dimen/padding16dp"
                    android:text="@string/text_PlayBackground"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_play_backgroud"
                    app:drawableRightCompat="@drawable/custom_ic_go"
                    app:fontFamily="@font/roboto_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_language"
                    tools:ignore="UnusedAttribute" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8dp"
                    android:clickable="true"
                    android:drawablePadding="@dimen/padding20dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:lineHeight="22dp"
                    android:paddingLeft="@dimen/img20dp"
                    android:paddingTop="@dimen/padding16dp"
                    android:paddingRight="@dimen/img20dp"
                    android:paddingBottom="@dimen/padding16dp"
                    android:text="@string/txt_notification"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_notification"
                    app:drawableRightCompat="@drawable/custom_ic_go"
                    app:fontFamily="@font/roboto_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tx_play_backgroud"
                    tools:ignore="UnusedAttribute" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="@dimen/padding20dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:lineHeight="22dp"
                    android:paddingLeft="@dimen/img20dp"
                    android:paddingTop="@dimen/padding16dp"
                    android:paddingRight="@dimen/img20dp"
                    android:paddingBottom="@dimen/padding16dp"
                    android:text="@string/text_languages"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_language"
                    app:drawableRightCompat="@drawable/custom_ic_go"
                    app:fontFamily="@font/roboto_regular"
                    app:layout_constraintBottom_toTopOf="@+id/tx_play_backgroud"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="UnusedAttribute" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



